# research-python-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/research_python_template/: __init__.py
